ruka-lang.org/src/lib/interpreter/fixtures/type-err/match-missing-else.ruka
// expect: non-exhaustive match
let main = () do
	let n: int = 3
	match n with
		1 do "one"
		2 do "two"
	end
end
